parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass13.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass13.json
---
Ok(
    Number(
        12300.0,
    ),
)
