parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass15.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass15.json
---
Ok(
    Array(
        [
            Number(
                -65.61972000000003,
            ),
        ],
    ),
)
