parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass16.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass16.json
---
Ok(
    Number(
        0.0,
    ),
)
